fix layout issue

--- a/css/output.css
+++ b/css/output.css
@@ -128,7 +128,7 @@ h1 {
   color: black;
   border: 1px solid black;
   font-weight: lighter;
-  height: 30px; }
+  height: 3vw; }
 
 .see-more {
   display: none; }
@@ -223,7 +223,7 @@ footer {
 #social {
   list-style-type: none;
   text-align: center;
-  margin: 3% auto 5% auto; }
+  margin: 4% auto 5% auto; }
   #social ul {
     width: 40%;
     max-width: 550px;
@@ -231,11 +231,8 @@ footer {
     display: flex;
     justify-content: space-around; }
   #social i {
-    width: 50px;
-    height: 50px;
-    border: 1px solid white;
     border-radius: 50%;
-    padding-top: 25%; }
+    padding: 9px; }
     #social i:hover {
       background-color: white;
       color: #002d56;
@@ -259,6 +256,9 @@ footer {
 
   footer {
     padding: 2% 0 3% 0; } }
+@media only screen and (max-width: 850px) {
+  #next-button {
+    height: 4vw; } }
 @media only screen and (max-width: 750px) {
   .card p {
     font-size: 14px; }
@@ -352,7 +352,29 @@ footer {
     footer > ul {
       padding-top: 60px; }
     footer #social {
-      margin: 44px auto 74px auto; } }
+      margin: 44px auto 74px auto; }
+
+  .cards {
+    background-color: #f4f6f9;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 20%;
+    width: 100%;
+    border-bottom: 3px solid #002d56; }
+    .cards .card {
+      height: 100%;
+      width: 100%;
+      display: none;
+      grid-column: 1 / 4;
+      grid-row: 1 / span 2;
+      text-align: center;
+      padding: 115px 10% 10% 10%; }
+
+  #next-button {
+    height: 50px; }
+    #next-button i {
+      height: 40px;
+      margin-bottom: 10px; } }
 @media only screen and (min-width: 2000px) {
   .container {
     max-width: 70%; } }
